--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
