--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+    "start": "node index.js",
+    "server": "nodemon index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
